--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="NASA picture of the day."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
      
-    <title>React App</title>
+    <title>Astronomy Picture of the day</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
